<resources>
    <string name="app_name">Wake on WAN bridge</string>
    <string name="notification_title_service_running">Wake on WAN bridge is running</string>
    <string name="notification_text_address_info">Listening on {ip}:{port}</string>
    <string name="main_service_status_label">Service status:</string>
    <string name="main_port_hint">Server port</string>
    <string name="start_service">Start service</string>
    <string name="stop_service">Stop service</string>
    <string name="service_status_unknown">Unknown</string>
    <string name="service_status_running">Running</string>
    <string name="service_status_stopped">Stopped</string>
    <string name="main_address_hint">Broadcast address</string>
</resources>